--- a/CTFd/CTFd/themes/admin/templates/challenges/create.html
+++ b/CTFd/CTFd/themes/admin/templates/challenges/create.html
@@ -39,6 +39,18 @@
 	</div>
 	{% endblock %}
 
+	{% block attribution %}
+	<div class="form-group">
+		<label>
+			Attribution:<br>
+			<small class="form-text text-muted">
+				Attribution for your challenge <small>(supports markdown)</small>
+			</small>
+		</label>
+		<input type="text" class="form-control" name="attribution" placeholder="Enter challenge attribution">
+	</div>
+	{% endblock %}
+
 	{% block value %}
 	<div class="form-group">
 		<label>
